--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -145,9 +145,23 @@
   background-color: red;
   width: 100%;
   height: 480px;
-  overflow: auto;
+  overflow: scroll;
   overflow-x: hidden;
-  scrollbar-width: thin;
+}
+
+.notes::-webkit-scrollbar {
+    width: 8px;
+}
+
+.notes::-webkit-scrollbar-track {
+  border-radius: 20px;
+    background: #2d2d2d;
+}
+
+.notes::-webkit-scrollbar-thumb {
+    background-color: rgba(255, 84, 17, 1);
+    border-radius: 20px;
+    border: 3px solid rgba(255, 84, 17, 1);
 }
 
 #note-empty {
