--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -52,6 +52,11 @@
   cursor: pointer;
 }
 
+#add-note p {
+  color: rgb(189, 189, 189);
+  text-align: right;
+}
+
 #add-note input {
   box-sizing: border-box;
   margin-top: 4px;
@@ -150,18 +155,18 @@
 }
 
 .notes::-webkit-scrollbar {
-    width: 8px;
+  width: 8px;
 }
 
 .notes::-webkit-scrollbar-track {
   border-radius: 20px;
-    background: #2d2d2d;
+  background: #2d2d2d;
 }
 
 .notes::-webkit-scrollbar-thumb {
-    background-color: rgba(255, 84, 17, 1);
-    border-radius: 20px;
-    border: 3px solid rgba(255, 84, 17, 1);
+  background-color: rgba(255, 84, 17, 1);
+  border-radius: 20px;
+  border: 3px solid rgba(255, 84, 17, 1);
 }
 
 #note-empty {
@@ -266,8 +271,8 @@
 
 .cf:before,
 .cf:after {
-  content: " "; /* 1 */
-  display: table; /* 2 */
+  content: " ";
+  display: table;
 }
 
 .cf:after {
